--- a/index.css/index.css
+++ b/index.css/index.css
@@ -3,6 +3,6 @@ ul,li{list-style:none;}
 a{text-decoration: none; color:inherit;}
 table{width:100%; border-collapse:collapse;}
 img{max-width: 100%;}
-body{background-color: #fff; color:#333;}
+body{background-color: #fff; color:#333;position:relative;}
 
-.in{width:200px; height:200px; color:#6353ac; font-size:50px; background-color:aqua;}
+.in{width:200px; height:200px; color:#6353ac; font-size:100px; background-color:aqua; position:absolute; top:50%; left:50%;}
